# astromaticw

./: .gitattributes  .gitignore  README  README.md  SExtractorW.py  TODO.md  pyproject.toml  setup.py  tophat.py
src/SExtractorW/: __init__.py
src/astromaticw/: __init__.py  apcor.py  astromaticw.py  reconstruct_psf.py
src/astromaticw/config/: default.psfex  default.sex  prepsfex.param
src/sextractorw/: __init__.py  astromaticw.py  sextractorw.py
