[project]
name = "astromaticw"
version = "0.4.0"
authors = [
    {name = "Steven Janssens", email = "steven.janssens@dragonfly1000.com"}
]
description='Low-level astromatic wrappers'
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=5.3.1",
    "photutils>=1.11.0",
]

[project.urls]
Homepage = "http://github.com/stevenrjanssens/astromaticw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
